<resources>
    <string name="app_name">Pocket Birdies</string>
    <string name="btlogin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="or_login_with">Or login with</string>
    <string name="lost_password">Lost Password?</string>
    <string name="lost_password_message">Please enter your email address below, and we will send you a verification code to reset your password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="btcontinue">Continue</string>
    <string name="login_goto"> <font color="#80FFFF99">Return to login </font> <font color="#C9B38D"><b>HERE</b></font> </string>
    <string name="verification">Verification</string>
    <string name="verification_message">Please enter your the 4 digit verification code from your email</string>
    <string name="enter_the_4_digit_code">Enter The 4 Digit Code</string>
    <string name="btverify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">Please create a new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="success">Success!</string>
    <string name="success_message">Use your new password to login and get started</string>
    <string name="create_account_message">We are thrilled to have you as a new member of the Pocket Birdies community! \n\n Pocket Birdies is designed to help connect golfers and golf instructors. Please select below if you are a wanting to join as golfer looking to book lessons, or a golf instructor looking to give lessons</string>
    <string name="btgolfer">Golfer</string>
    <string name="btcoach">Coach</string>
    <string name="creat_account_golfer_message">Please start by entering an email and password to be connected to your account.</string>
    <string name="creat_account_golfer_message_second">Please fill out your basic profile information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="years_of_golf_experience">Years of Golf Experience</string>
    <string name="golf_handicap">Golf Handicap</string>
    <string name="home_course">Home Course</string>
    <string name="just_starting_type_n_a">Just starting? Type N/A</string>
    <string name="if_you_re_a_beginner_select_n_a">If you\'re a beginner, select N/A</string>
    <string name="if_you_don_t_know_select_n_a">If you don\'t know, select N/A</string>
    <string name="welcome_to_pocket_birdies">Welcome to \nPocket Birdies!</string>
    <string name="success_message_second">You are now ready to get started! \n\nYou can now login and get finish setting up your custom profile.</string>
    <string name="settings">Settings</string>
    <string name="email_digits">q wertyuiopasdfghjklzxcvbnm.@-_1234567890</string>
    <string name="name_digit">q wertyuiopasdfghjklzxcvbnmQ WERTYUIOPASDFGHJKLZXCVBNM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_instructors">Nearby Instructors</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="todd_anderson">Todd Anderson</string>
    <string name="toddandersontpc">\@ToddAndersonTPC</string>
    <string name="instructors_disc">Director of PGA TOUR\'s Performance Center at TPC Sawgrass, 2010 PGA National Teacher of the Year. Ping Brand Ambassador, Polo Golf Advisory Staff</string>
    <string name="hourly_rate">Hourly rate: <font color="#3A3A3A"><b>$30.00</b></font></string>
    <string name="instructor_link"><a><u>tpc.com/sawgrass</u></a></string>
    <string name="schedule_today">Schedule Today</string>
    <string name="lessons">Lessons</string>
    <string name="message">Message</string>
    <string name="average_rating"><font color="#3A3A3A"><b>4.0</b></font> Average Rating</string>
    <string name="_23_registered_users">+ 23 registered users</string>
    <string name="preferred_hour_s">Preferred Hour(s)</string>
    <string name="select_date">Select Date</string>
    <string name="mon_apr_2">Mon, Apr 2</string>
    <string name="blake_jirges">Blake Jirges</string>
    <string name="select_preferred_time">Select Preferred Time</string>
    <string name="instructor">Instructor</string>
    <string name="book_now">Book now</string>
    <string name="view_profile">View profile</string>
    <string name="booking_details">Booking Details</string>
    <string name="mccormick_ranch_golf_club">McCormick Ranch Golf Club</string>
    <string name="mon_april_2_2022">Mon, April 2 2022</string>
    <string name="_8_00_am_9_00_am">8:00 AM - 9:00 AM</string>
    <string name="_30_00">$30.00</string>
    <string name="book_lesson">Book Lesson</string>
    <string name="booking_lesson_message">You will be redirected to the payment screen. \n\n Continue booking this lesson?</string>
    <string name="preferred_date">Preferred Date</string>
    <string name="radius">Radius</string>
    <string name="price">Price</string>
    <string name="average_rating_title">Average Rating</string>
    <string name="rating_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod...Read More</string>
    <string name="please_rate_your_experience_with_this_coach">Please rate your experience with this coach</string>
    <string name="please_add_a_review">Please add a review</string>
    <string name="review_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvc">CVC</string>
    <string name="use_this_card">Use this card</string>
    <string name="payment_method">Payment Method</string>
    <string name="promo_code">Promo Code</string>
    <string name="amount">Amount</string>
    <string name="sub_total">Sub-total</string>
    <string name="discount">Discount</string>
    <string name="taxes_fees"><![CDATA[Taxes & Fees]]></string>
    <string name="total_amount">Total Amount</string>
    <string name="pay_45_00_usd">Pay $45.00 USD</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="golf_experience">Golf Experience</string>
    <string name="personal_details">Personal Details</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="hourly_rate_30_00">Hourly Rate: <font color="#3A3A3A"><b>$30.00</b></font></string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="lesson_notes">Lesson Notes</string>
    <string name="lesson_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comm consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\nExcepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="completed">Completed</string>
    <string name="cancel_booking_message">Pocket Birdies may charge a <font color="#1D251A"><b>25% cancellation fee</b></font> if 24 hours notice is not provided.\n\nAre you sure you want to cancel this booking?</string>
    <string name="pay_now">Pay now</string>
    <string name="coaches_near_me">Coaches Near Me</string>
    <string name="search_radius">Search Radius</string>
    <string name="chat_notification_message"><font color="#C9B38D"><b>Blake Jirges</b></font>  <font color="#1D251A">sent you a message</font></string>
    <string name="current_password">Current Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="policy_message"><font color="#C9B38D"><b>Lorem ipsum dolor sit amet</b></font> <font color="#4A4A4A">\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</font>  </string>
    <string name="about_us"><font color="#4A4A4A">Pocket Birdies is a platform designed to make improving at golf more simple, by connecting players to our coaching partners, from formal golf instruction to leveraging their knowledge of top-tier training content, drills, and equipment.\n\nStay up to date and follow our socials for exclusive special offers @pocketbirdies \n\nWebsite: </font> <font color="#C9B38D"> https://pocketbirdies.com/</font> </string>

</resources>